# Motif-Search-in-biological-sequences-using-Finger-Trees

./: CMakeLists.txt  FingerTrees.cpp  FingerTrees.h  GCContent.h  Inversion.h  MotifSearch.h  Sequence.cpp  Sequence.h  Utils.cpp  Utils.h  fingertree  main.cpp
src/: main.cpp
src/core/: bio_types.hpp  fasta_reader.hpp  finger_tree.hpp  node.hpp  utils.hpp
src/features/gc_content/: gc_content.hpp
src/features/gene_editing/: gene_editing.hpp
src/features/inversion/: chromosomal_inversion.hpp
src/features/motif_search/: motif_search.hpp
